--- a/main/_modules/merlin/systems/dag/ensemble.html
+++ b/main/_modules/merlin/systems/dag/ensemble.html
@@ -139,10 +139,12 @@
 <span class="sd">        Write out an ensemble model configuration directory. The exported</span>
 <span class="sd">        ensemble is designed for use with Triton Inference Server.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
+        <span class="n">backend</span> <span class="o">=</span> <span class="s2">&quot;ensemble&quot;</span>
+
         <span class="c1"># Create ensemble config</span>
         <span class="n">ensemble_config</span> <span class="o">=</span> <span class="n">model_config</span><span class="o">.</span><span class="n">ModelConfig</span><span class="p">(</span>
             <span class="n">name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">name</span><span class="p">,</span>
-            <span class="n">platform</span><span class="o">=</span><span class="s2">&quot;ensemble&quot;</span><span class="p">,</span>
+            <span class="n">platform</span><span class="o">=</span><span class="n">backend</span><span class="p">,</span>
             <span class="c1"># max_batch_size=configs[0].max_batch_size</span>
         <span class="p">)</span>
 
@@ -168,14 +170,14 @@
         <span class="n">node_idx</span> <span class="o">=</span> <span class="mi">0</span>
         <span class="n">node_id_lookup</span> <span class="o">=</span> <span class="p">{}</span>
         <span class="k">for</span> <span class="n">node</span> <span class="ow">in</span> <span class="n">postorder_nodes</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">node</span><span class="o">.</span><span class="n">exportable</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">node</span><span class="o">.</span><span class="n">exportable</span><span class="p">(</span><span class="n">backend</span><span class="p">):</span>
                 <span class="n">node_id_lookup</span><span class="p">[</span><span class="n">node</span><span class="p">]</span> <span class="o">=</span> <span class="n">node_idx</span>
                 <span class="n">node_idx</span> <span class="o">+=</span> <span class="mi">1</span>
 
         <span class="n">node_configs</span> <span class="o">=</span> <span class="p">[]</span>
         <span class="c1"># Export node configs and add ensemble steps</span>
         <span class="k">for</span> <span class="n">node</span> <span class="ow">in</span> <span class="n">postorder_nodes</span><span class="p">:</span>
-            <span class="k">if</span> <span class="n">node</span><span class="o">.</span><span class="n">exportable</span><span class="p">:</span>
+            <span class="k">if</span> <span class="n">node</span><span class="o">.</span><span class="n">exportable</span><span class="p">(</span><span class="n">backend</span><span class="p">):</span>
                 <span class="n">node_id</span> <span class="o">=</span> <span class="n">node_id_lookup</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">node</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
                 <span class="n">node_name</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">node_id</span><span class="si">}</span><span class="s2">_</span><span class="si">{</span><span class="n">node</span><span class="o">.</span><span class="n">export_name</span><span class="si">}</span><span class="s2">&quot;</span>
 
@@ -193,7 +195,9 @@
                 <span class="p">)</span>
 
                 <span class="k">for</span> <span class="n">input_col_name</span><span class="p">,</span> <span class="n">input_col_schema</span> <span class="ow">in</span> <span class="n">node</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-                    <span class="n">source</span> <span class="o">=</span> <span class="n">_find_column_source</span><span class="p">(</span><span class="n">node</span><span class="o">.</span><span class="n">parents_with_dependencies</span><span class="p">,</span> <span class="n">input_col_name</span><span class="p">)</span>
+                    <span class="n">source</span> <span class="o">=</span> <span class="n">_find_column_source</span><span class="p">(</span>
+                        <span class="n">node</span><span class="o">.</span><span class="n">parents_with_dependencies</span><span class="p">,</span> <span class="n">input_col_name</span><span class="p">,</span> <span class="n">backend</span>
+                    <span class="p">)</span>
                     <span class="n">source_id</span> <span class="o">=</span> <span class="n">node_id_lookup</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="n">source</span><span class="p">,</span> <span class="kc">None</span><span class="p">)</span>
                     <span class="n">in_suffix</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;_</span><span class="si">{</span><span class="n">source_id</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">if</span> <span class="n">source_id</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="s2">&quot;&quot;</span>
                     <span class="k">if</span> <span class="n">input_col_schema</span><span class="o">.</span><span class="n">is_list</span> <span class="ow">and</span> <span class="n">input_col_schema</span><span class="o">.</span><span class="n">is_ragged</span><span class="p">:</span>
@@ -236,15 +240,15 @@
         <span class="k">return</span> <span class="p">(</span><span class="n">ensemble_config</span><span class="p">,</span> <span class="n">node_configs</span><span class="p">)</span></div></div>
 
 
-<span class="k">def</span> <span class="nf">_find_column_source</span><span class="p">(</span><span class="n">upstream_nodes</span><span class="p">,</span> <span class="n">column_name</span><span class="p">):</span>
+<span class="k">def</span> <span class="nf">_find_column_source</span><span class="p">(</span><span class="n">upstream_nodes</span><span class="p">,</span> <span class="n">column_name</span><span class="p">,</span> <span class="n">backend</span><span class="p">):</span>
     <span class="n">source_node</span> <span class="o">=</span> <span class="kc">None</span>
     <span class="k">for</span> <span class="n">upstream_node</span> <span class="ow">in</span> <span class="n">upstream_nodes</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">column_name</span> <span class="ow">in</span> <span class="n">upstream_node</span><span class="o">.</span><span class="n">output_columns</span><span class="o">.</span><span class="n">names</span><span class="p">:</span>
             <span class="n">source_node</span> <span class="o">=</span> <span class="n">upstream_node</span>
             <span class="k">break</span>
 
-    <span class="k">if</span> <span class="n">source_node</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">source_node</span><span class="o">.</span><span class="n">exportable</span><span class="p">:</span>
-        <span class="k">return</span> <span class="n">_find_column_source</span><span class="p">(</span><span class="n">source_node</span><span class="o">.</span><span class="n">parents_with_dependencies</span><span class="p">,</span> <span class="n">column_name</span><span class="p">)</span>
+    <span class="k">if</span> <span class="n">source_node</span> <span class="ow">and</span> <span class="ow">not</span> <span class="n">source_node</span><span class="o">.</span><span class="n">exportable</span><span class="p">(</span><span class="n">backend</span><span class="p">):</span>
+        <span class="k">return</span> <span class="n">_find_column_source</span><span class="p">(</span><span class="n">source_node</span><span class="o">.</span><span class="n">parents_with_dependencies</span><span class="p">,</span> <span class="n">column_name</span><span class="p">,</span> <span class="n">backend</span><span class="p">)</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">source_node</span>
 </pre></div>
