--- a/review/pr-222/_modules/merlin/systems/dag/ops/workflow.html
+++ b/review/pr-222/_modules/merlin/systems/dag/ops/workflow.html
@@ -94,8 +94,11 @@
 <span class="kn">from</span> <span class="nn">merlin.core.protocols</span> <span class="kn">import</span> <span class="n">Transformable</span>  <span class="c1"># noqa</span>
 <span class="kn">from</span> <span class="nn">merlin.dag</span> <span class="kn">import</span> <span class="n">ColumnSelector</span>
 <span class="kn">from</span> <span class="nn">merlin.schema</span> <span class="kn">import</span> <span class="n">ColumnSchema</span><span class="p">,</span> <span class="n">Schema</span>
-<span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.compat</span> <span class="kn">import</span> <span class="n">pb_utils</span>  <span class="c1"># noqa</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.dag.ops.operator</span> <span class="kn">import</span> <span class="n">PipelineableInferenceOperator</span>  <span class="c1"># noqa</span>
+<span class="kn">from</span> <span class="nn">merlin.systems.triton.conversions</span> <span class="kn">import</span> <span class="p">(</span>
+    <span class="n">dict_array_to_triton_request</span><span class="p">,</span>
+    <span class="n">triton_response_to_dict_array</span><span class="p">,</span>
+<span class="p">)</span>
 <span class="kn">from</span> <span class="nn">merlin.systems.triton.export</span> <span class="kn">import</span> <span class="n">generate_nvtabular_model</span>
 
 
@@ -154,28 +157,18 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span> <span class="o">=</span> <span class="n">workflow</span><span class="o">.</span><span class="n">output_schema</span></div>
 
 <div class="viewcode-block" id="TransformWorkflow.transform"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.transform">[docs]</a>    <span class="k">def</span> <span class="nf">transform</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">col_selector</span><span class="p">:</span> <span class="n">ColumnSelector</span><span class="p">,</span> <span class="n">transformable</span><span class="p">:</span> <span class="n">Transformable</span><span class="p">):</span>
-        <span class="c1"># TODO: Validate that the inputs match the schema</span>
-        <span class="c1"># TODO: Should we coerce the dtypes to match the schema here?</span>
-        <span class="n">input_tensors</span> <span class="o">=</span> <span class="p">[]</span>
-        <span class="k">for</span> <span class="n">col_name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
-            <span class="n">input_tensors</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">pb_utils</span><span class="o">.</span><span class="n">Tensor</span><span class="p">(</span><span class="n">col_name</span><span class="p">,</span> <span class="n">transformable</span><span class="p">[</span><span class="n">col_name</span><span class="p">]))</span>
-
-        <span class="n">inference_request</span> <span class="o">=</span> <span class="n">pb_utils</span><span class="o">.</span><span class="n">InferenceRequest</span><span class="p">(</span>
-            <span class="n">model_name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">nvt_model_name</span><span class="p">,</span>
-            <span class="n">requested_output_names</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_names</span><span class="p">,</span>
-            <span class="n">inputs</span><span class="o">=</span><span class="n">input_tensors</span><span class="p">,</span>
+        <span class="n">inference_request</span> <span class="o">=</span> <span class="n">dict_array_to_triton_request</span><span class="p">(</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">_nvt_model_name</span><span class="p">,</span>
+            <span class="n">transformable</span><span class="p">,</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">input_schema</span><span class="o">.</span><span class="n">column_names</span><span class="p">,</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_names</span><span class="p">,</span>
         <span class="p">)</span>
+
         <span class="n">inference_response</span> <span class="o">=</span> <span class="n">inference_request</span><span class="o">.</span><span class="n">exec</span><span class="p">()</span>
 
-        <span class="c1"># TODO: Validate that the outputs match the schema</span>
-        <span class="n">outputs_dict</span> <span class="o">=</span> <span class="p">{}</span>
-        <span class="k">for</span> <span class="n">out_col_name</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_schemas</span><span class="o">.</span><span class="n">keys</span><span class="p">():</span>
-            <span class="n">output_val</span> <span class="o">=</span> <span class="n">pb_utils</span><span class="o">.</span><span class="n">get_output_tensor_by_name</span><span class="p">(</span>
-                <span class="n">inference_response</span><span class="p">,</span> <span class="n">out_col_name</span>
-            <span class="p">)</span><span class="o">.</span><span class="n">as_numpy</span><span class="p">()</span>
-            <span class="n">outputs_dict</span><span class="p">[</span><span class="n">out_col_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">output_val</span>
-
-        <span class="k">return</span> <span class="nb">type</span><span class="p">(</span><span class="n">transformable</span><span class="p">)(</span><span class="n">outputs_dict</span><span class="p">)</span></div>
+        <span class="k">return</span> <span class="n">triton_response_to_dict_array</span><span class="p">(</span>
+            <span class="n">inference_response</span><span class="p">,</span> <span class="nb">type</span><span class="p">(</span><span class="n">transformable</span><span class="p">),</span> <span class="bp">self</span><span class="o">.</span><span class="n">output_schema</span><span class="o">.</span><span class="n">column_names</span>
+        <span class="p">)</span></div>
 
 <div class="viewcode-block" id="TransformWorkflow.from_config"><a class="viewcode-back" href="../../../../../generated/merlin.systems.dag.ops.workflow.TransformWorkflow.html#merlin.systems.dag.ops.workflow.TransformWorkflow.from_config">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">from_config</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">config</span><span class="p">:</span> <span class="nb">dict</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="s2">&quot;TransformWorkflow&quot;</span><span class="p">:</span>
